--- a/tmux.conf
+++ b/tmux.conf
@@ -148,3 +148,6 @@ setw -g aggressive-resize on
 
 #toggles sync on and sends commands to all panes in windows or switches that off
 bind / set-window-option synchronize-panes
+
+#kill-session
+bind z confirm-before kill-session
