--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-bind a set-window-option synchronize-panesbind a set-window-option synchronize-panes#set-option -g prefix C-a
+#set-option -g prefix C-a
 #unbind C-b
 
 #key stroke latency - fast
@@ -114,34 +114,13 @@ set -g default-command /bin/bash
 set -g default-shell /bin/bash
 
 #logging key bind
-#bind P pipe-pane -o "cat >>~/logs/#W_tmux.log" \; display "Toggled logging to ~/logs/#W_tmux.log"
-
-#history
-set-option -g history-limit 50000
-
-# Set the repeat-time to 1 second so that multiple commands can be entered
-# without sending the prefix-key within 1 second. Commands are made repeatable
-# by -r option of bind-key. By default it is 500 ms.
-set -g repeat-time 1000
+bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
 #remove bar
 unbind Y
 bind Y set -g status off
 unbind U
 bind U set -g status on
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-logging'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
 
 #resize window even if smaller clients are connected
 setw -g aggressive-resize on
