--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 #set-option -g prefix C-a
 #unbind C-b
+set-option -g history-limit 50000
 
 #key stroke latency - fast
 set -sg escape-time 1
@@ -43,8 +44,8 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-#enable mouse mode
-#setw -g mode-mouse on
+#enable mouse mode >2.1
+#setw -g mouse on
 
 #mouse now can resize
 #set -g mouse-select-pane on
