--- a/tmux.conf
+++ b/tmux.conf
@@ -65,24 +65,24 @@ set -g default-terminal "screen-256color"
 set -g status-fg white
 set -g status-bg black
 
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+#setw -g window-status-fg cyan
+#setw -g window-status-bg default
+#setw -g window-status-attr dim
 
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+#setw -g window-status-current-fg white
+#setw -g window-status-current-bg red
+#setw -g window-status-current-attr bright
 
 #pane divider colors
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+#set -g pane-border-fg green
+#set -g pane-border-bg black
+#set -g pane-active-border-fg white
+#set -g pane-active-border-bg yellow
 
 #command line
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+#set -g message-fg white
+#set -g message-bg black
+#set -g message-attr bright
 
 #status bar cust
 set -g status-left-length 40
