--- a/tmux.conf
+++ b/tmux.conf
@@ -62,27 +62,33 @@ bind -r L resize-pane -R 5
 set -g default-terminal "screen-256color"
 
 #status bar colors
-set -g status-fg white
-set -g status-bg black
+#set -g status-fg white
+#set -g status-bg black
+set -g status-style bg=black,fg=white
 
 #setw -g window-status-fg cyan
 #setw -g window-status-bg default
 #setw -g window-status-attr dim
+setw -g window-status-style fg=cyan,bg=default,dim
 
 #setw -g window-status-current-fg white
 #setw -g window-status-current-bg red
 #setw -g window-status-current-attr bright
+setw -g window-status-current-style fg=white,bg=red,bright
 
 #pane divider colors
 #set -g pane-border-fg green
 #set -g pane-border-bg black
 #set -g pane-active-border-fg white
 #set -g pane-active-border-bg yellow
+set -g pane-border-style fg=green,bg=black
+set -g pane-active-border-style fg=white,bg=yellow
 
 #command line
 #set -g message-fg white
 #set -g message-bg black
 #set -g message-attr bright
+set -g message-style fg=white,bg=black,bright
 
 #status bar cust
 set -g status-left-length 40
